updating the code
